--- a/src/main/resources/templates/apply_for_research.html
+++ b/src/main/resources/templates/apply_for_research.html
@@ -10,7 +10,7 @@
     <h1>Apply for a Research</h1>
     <form th:action="@{/research-registrations/{id}(id=${patient.id})}"
           th:object="${researchRegistration}"
-          method="post">
+          method="post"   onsubmit="return handleFormSubmission(event);">
 
         <!-- Скрытое поле для patientId -->
         <input type="hidden" th:field="*{patientId}" />
@@ -56,5 +56,33 @@
         <button type="submit">Apply for Research</button>
     </form>
 </div>
+<script th:inline="javascript">
+    function handleFormSubmission(event) {
+        event.preventDefault();
+        const form = event.target;
+        const formData = new FormData(form);
+
+        fetch(form.action, {
+            method: form.method,
+            body: new URLSearchParams(formData),
+        })
+            .then(response => {
+                if (response.ok) {
+
+                    alert('Research registration created successfully!');
+                    window.location.href = '/staff-members/staff_dashboard';
+                } else {
+                    alert('An error occurred while creating research registration.');
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('An unexpected error occurred.');
+            });
+
+        return false;
+    }
+</script>
+
 </body>
 </html>
