--- a/src/main/resources/templates/staff_member_dashboard.html
+++ b/src/main/resources/templates/staff_member_dashboard.html
@@ -34,6 +34,10 @@
             th:onclick="|window.location.href='@{/biomaterials/lab}'|">
       Information about biomaterials
     </button>
+    <button th:if="${staffMember.position == 'Geneticist'}"
+            th:onclick="|window.location.href='@{/researches/all}'|">
+      Researches
+    </button>
     <button th:if="${staffMember.position == 'Nurse'}"
             th:onclick="|window.location.href='@{/biomaterials/expired}'|">
       Information about expired biomaterials
