feat: biomaterial sampling

--- a/src/main/resources/templates/staff_member_dashboard.html
+++ b/src/main/resources/templates/staff_member_dashboard.html
@@ -56,6 +56,10 @@
       Manage Vacancies
     </button>
     <button th:if="${staffMember.position == 'Technician'}"
+            th:onclick="|window.location.href='@{/biomaterials/create}'|">
+      Biomaterial Sampling
+    </button>
+    <button th:if="${staffMember.position == 'Technician'}"
             th:onclick="|window.location.href='@{/research-registrations/all}'|">
       Research Registrations
     </button>
